--- a/siteXYZ/antd-demo-ts/package.json
+++ b/siteXYZ/antd-demo-ts/package.json
@@ -17,6 +17,8 @@
     "react-redux": "^7.1.3",
     "react-router5": "^7.1.0",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "router5": "^7.0.2",
     "router5-plugin-browser": "^7.0.2",
     "router5-plugin-persistent-params": "^7.0.2",
