--- a/siteXYZ/antd-demo-ts/package.json
+++ b/siteXYZ/antd-demo-ts/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^16.9.0",
     "antd": "^3.26.6",
     "axios": "^0.19.0",
+    "nice-try": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router5": "^7.1.0",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "router5": "^7.0.2",
     "router5-plugin-browser": "^7.0.2",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.7"
   }
 }
